# steam-profile-stealer

./: .dockerignore  .gitignore  Cargo.toml  Cranky.toml  Dockerfile  README.md  build.sh  image_stealer.js  package-lock.json
src/: main.rs  message.rs  profile.rs  stealer.rs  websocket.rs
src/multipart/: data_profile_edit.rs  mod.rs  multipart_form.rs  profile_details.rs  update.rs
steam-profile-stealer/: README.md  index.html  package-lock.json  package.json
steam-profile-stealer/src/: App.vue  main.ts
steam-profile-stealer/src/components/: Console.vue  CookieInput.vue
steam-profile-stealer/src/components/profiles/: BothProfiles.vue  ProfileComponent.vue
steam-profile-stealer/src/plugins/: createWebsocket.ts  vuetify.ts
steam-profile-stealer/src/stores/: cookie.ts  loading.ts  messages.ts  profile.ts  websocket.ts
templates/: index.html
