[package]
name = "steam-profiler-stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
axum = { version = "0.6.18", features = ["ws"] }
anyhow = "1.0.71"
paris = { version = "1.5.15", features = ["no_logger", "macros"] }
once_cell = "1.17.1"
reqwest = { version = "0.11.17" }
serde = { version = "1.0.163", features = ["derive"]}
scraper = "0.16.0"
serde_json = "1.0.96"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}

futures = "0.3.28"